--- a/server-node/package.json
+++ b/server-node/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "sequelize": "^6.31.0",
+    "sqlite3": "^5.1.6"
   }
 }
