add path to database

--- a/server-node/config/config.json
+++ b/server-node/config/config.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "raychain",
     "host": "127.0.0.1",
-    "dialect": "sqlite"
+    "dialect": "sqlite",
+    "storage": "./database/raychain.sqlite"
   },
   "test": {
     "username": "rayniel95",
