--- a/server-node/package.json
+++ b/server-node/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.1",
     "sequelize": "^6.31.0",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.0"
   }
 }
