--- a/server-node/package.json
+++ b/server-node/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "yarn run clean && npx tsc",
+    "start": "yarn run build && node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,10 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.0"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
+    "sequelize-cli": "^6.6.0",
+    "typescript": "^5.0.4"
   }
 }
