--- a/server-node/package.json
+++ b/server-node/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "ethereum-cryptography": "^1.2.0",
     "express": "^4.18.1",
     "sequelize": "^6.31.0",
     "sqlite3": "^5.1.6"
