--- a/server-node/package.json
+++ b/server-node/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "yarn run clean && npx tsc",
     "start": "yarn run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "clean": "rimraf dist"
   },
   "keywords": [],
@@ -22,8 +23,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
     "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
