--- a/server-node/package.json
+++ b/server-node/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "yarn run clean && npx tsc",
     "start": "yarn run build && node dist/index.js",
-    "test": "jest --coverage",
+    "test": "jest",
     "test:watch": "jest --watch",
     "clean": "rimraf dist"
   },
