--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "ecdsa-node",
   "private": true,
+  "name": "ecdsa-node",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "latest",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "sass": "^1.54.9",
-    "vite": "^3.1.0"
+    "@types/node": "18.15.12",
+    "@types/react": "18.0.37",
+    "sass": "^1.62.0",
+    "typescript": "5.0.4"
   }
 }
