--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.12.9",
+    "ethereum-cryptography": "^2.0.0",
     "ethers": "^5",
     "next": "latest",
     "react": "18.2.0",
