--- a/server-node/package.json
+++ b/server-node/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ethereum-cryptography": "^1.2.0",
+    "ethers": "^5",
     "express": "^4.18.1",
     "sequelize": "^6.31.0",
     "sqlite3": "^5.1.6"
