--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -56,8 +56,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
-          path: |
-            client
+          working-directory: ./client
           # Automatically inject basePath in your Next.js configuration file and disable
           # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
           #
@@ -66,8 +65,9 @@ jobs:
       - name: Restore cache
         uses: actions/cache@v3
         with:
+          working-directory: ./client
           path: |
-            client/.next/cache
+            .next/cache
           # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
