--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -21,7 +21,7 @@ jobs:
           # update the Node version to meet your needs
           node-version: 16
           cache: yarn
-
+          cache-dependency-path: client/yarn.lock
       - name: Build
         run: |
           npm ci
