--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -24,9 +24,9 @@ jobs:
           cache-dependency-path: client/yarn.lock
       - name: Build
         run: |
-          npm ci
-          npm run build
-          npm run export
+          yarn ci
+          yarn build
+          yarn export
           touch out/.nojekyll
 
       - name: Deploy to GitHub Pages
