fix yarn ci type and folder path

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build      
         working-directory: client
         run: |
-          yarn ci
+          yarn --frozen-lockfile
           yarn build
           yarn export
           touch out/.nojekyll
@@ -34,4 +34,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
           branch: gh-pages
-          folder: out
+          folder: client/out
